Fixed up a lot of card styles, set all cards to same padding, fixed gap issue in first column by swapping it to flex and using flex layout + gap.

--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@
     width: 50%;
 }
 
+#grid-container {
+    max-width: 950px;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
